Created packages and Refactored all classes into relevant packages

--- a/app/src/main/res/layout/activity_job_posting.xml
+++ b/app/src/main/res/layout/activity_job_posting.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".JobPostingActivity">
+    tools:context=".util.jobPost.JobPostingActivity">
 
     <ScrollView
         android:layout_width="match_parent"
