--- a/app/src/main/res/layout/activity_employee_offers.xml
+++ b/app/src/main/res/layout/activity_employee_offers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EmployeeOffersActivity">
+    tools:context=".util.employeeView.EmployeeOffersActivity">
 
     <!-- Title for the offers activity -->
     <TextView
