--- a/app/src/main/res/layout/activity_employer.xml
+++ b/app/src/main/res/layout/activity_employer.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EmployerActivity">
+    tools:context=".ui.EmployerActivity">
 
     <ScrollView
         android:layout_width="match_parent"
