--- a/app/src/main/res/layout/activity_hired_employees.xml
+++ b/app/src/main/res/layout/activity_hired_employees.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.EmployerActivity">
+    tools:context=".util.employerView.HiredEmployeesActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,7 +18,6 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/employerTopLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24sp"
@@ -27,10 +26,10 @@
                 tools:ignore="MissingConstraints">
 
                 <TextView
-                    android:id="@+id/myPostingsTitle"
+                    android:id="@+id/myEmployeesTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="My Postings"
+                    android:text="My Employees"
                     android:textColor="#2196F3"
                     android:textSize="30sp"
                     android:textStyle="bold"
@@ -43,19 +42,10 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1" />
-
-                <ImageButton
-                    android:id="@+id/createPostButton"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:background="#00FFFFFF"
-                    android:contentDescription="Create new posting"
-                    app:srcCompat="@android:drawable/ic_menu_add"
-                    app:tint="#494545" />
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/employerRecyclerView"
+                android:id="@+id/hiredEmployeesRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -63,30 +53,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/employeeTopLayout"
                 tools:itemCount="3"
-                tools:listitem="@layout/job_item_view" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center"
-                android:layout_marginTop="16dp">
-
-                <Button
-                    android:id="@+id/hiredEmployeesButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hired Employees"
-                    android:backgroundTint="#677676"
-                    android:layout_marginEnd="8dp" />
-
-                <Button
-                    android:id="@+id/logoutButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#677676"
-                    android:text="Logout" />
-            </LinearLayout>
+                tools:listitem="@layout/hired_employee_item_view" />
 
         </LinearLayout>
     </ScrollView>
