--- a/app/src/main/res/layout/hired_employee_item_view.xml
+++ b/app/src/main/res/layout/hired_employee_item_view.xml
@@ -80,5 +80,16 @@
             android:backgroundTint="#1EAB0E"
             android:text="Mark as Completed"
             android:textSize="14sp"  />
+
+        <Button
+            android:id="@+id/rateEmployeeButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
+            android:backgroundTint="#757575"
+            android:text="Rate Employee"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
