--- a/app/src/main/res/layout/activity_employer_profile.xml
+++ b/app/src/main/res/layout/activity_employer_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -63,6 +62,15 @@
                 android:text="Employer Rating"
                 android:textSize="18sp"
                 android:layout_marginVertical="8dp" />
+
+            <Button
+                android:id="@+id/addToPreferredListButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="30dp"
+                android:backgroundTint="#757575"
+                android:layout_gravity="center"
+                android:text="Add to Preferred Employer List" />
 
         </LinearLayout>
     </ScrollView>
