--- a/app/src/main/res/layout/activity_job_details_view.xml
+++ b/app/src/main/res/layout/activity_job_details_view.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="15dp">
+            android:padding="15dp" >
 
             <!-- Title Bar with Job ID and Job Title -->
             <!-- Concatenate title and id -->
@@ -213,36 +213,42 @@
                     android:layout_weight="2" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/employerProfileButton"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="#2196F3"
-                android:text="Employer Profile"
-                android:textSize="16sp"
-                android:visibility="gone" />
+                android:layout_gravity="center"
+                android:layout_marginVertical="24dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/employerProfileButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:backgroundTint="#2196F3"
+                    android:text="Employer Profile"
+                    android:textSize="16sp"
+                    android:layout_weight="1"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/applyButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:backgroundTint="#2196F3"
+                    android:text="Apply"
+                    android:textSize="16sp"
+                    android:layout_weight="1"
+                    android:visibility="gone" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/addToPreferredJobsButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="#2196F3"
+                android:backgroundTint="#BCC7D5"
                 android:text="Add to Preferred Jobs"
-                android:textSize="16sp"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/applyButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="#2196F3"
-                android:text="Apply"
                 android:textSize="16sp"
                 android:visibility="gone" />
 
