--- a/app/src/main/res/layout/employee_application_item_view.xml
+++ b/app/src/main/res/layout/employee_application_item_view.xml
@@ -67,5 +67,15 @@
             android:visibility="gone"
             android:textSize="14sp" />
 
+        <Button
+            android:id="@+id/rateEmployerButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#757575"
+            android:text="Rate Employer"
+            android:visibility="gone"
+            android:textSize="14sp" />
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
