--- a/app/src/main/res/layout/activity_job_details_view.xml
+++ b/app/src/main/res/layout/activity_job_details_view.xml
@@ -213,6 +213,29 @@
                     android:layout_weight="2" />
             </LinearLayout>
 
+            <!-- Payment Status -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:id="@+id/paymentStatusLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Payment Status:"
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/paymentStatusDetails"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Not Payed"
+                    android:layout_weight="2" />
+            </LinearLayout>
+
             <Button
                 android:id="@+id/applyButton"
                 android:layout_width="match_parent"
