--- a/app/src/main/res/layout/activity_hired_employees.xml
+++ b/app/src/main/res/layout/activity_hired_employees.xml
@@ -55,6 +55,15 @@
                 tools:itemCount="3"
                 tools:listitem="@layout/hired_employee_item_view" />
 
+            <Button
+                android:id="@+id/dashboardButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="#677676"
+                android:text="Return to Dashboard" />
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
